add github link

--- a/weather.html
+++ b/weather.html
@@ -74,6 +74,14 @@
             </li>
         </ul>
     </div>
+    <div class="github-link">
+        <a href="https://github.com/Skorohod91/WeatherApp" target="_blank">
+            Open-sourse code 
+        </a>
+        <span>
+            by Alena Skorokhod
+        </span>
+    </div>
     <script src="weather.js"></script>  
 </body>
 </html>
