--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="current-wether-container">
                             <span class="current-wether-title">Currently:</span>
-                            <img class="current-weather-imgclear" src="http://openweathermap.org/img/wn/10d@2x.png" alt="clear">
+                            <img class="current-weather-imgclear" src="https://openweathermap.org/img/wn/10d@2x.png" alt="clear">
                         </div>
                     </div>
                 </div>
