--- a/index.html
+++ b/index.html
@@ -13,66 +13,24 @@
         <div class="search-container">
             <div class="search-city">
                 <form>
-                    <input class="text input-field" type="text" placeholder="Enter a city">
+                    <input class="text input-field" type="text" placeholder="Enter a city name">
                     <button class="btn btn-success btn-sm" type="button">Search</button>
-                    <button class="current-button btn-position" type="button">Current</button>
+                    <button class="current-button btn-position" type="button">Current location</button>
 
                 </form>
             </div>
             <div class="container-summary">
-                <div class="weather-summary">
-                    <div class="weather-summary-item">
-                        <h1 class="city-name">New York</h1>
-                        <div class="current-time">Saturday 10:25</div>
-                    </div>
-                    <div class="weather-summary-item">
-                        <div class="temperature-container">
-                            <span class="temperature">17</span>
-                            <button class="btn btn-link btn-color-red btn-celsius active">°C</button> 
-                            | 
-                            <button class="btn btn-link btn-color-red btn-fahrenheit">°F</button>
-                        </div>
-                        <div class="current-wether-container">
-                            <span class="current-wether-title">Currently:</span>
-                            <img class="current-weather-imgclear" src="https://openweathermap.org/img/wn/10d@2x.png" alt="clear">
-                        </div>
-                    </div>
-                </div>
+                <h2 class="search-city">No data yet.</h2>
+                <p class="placeholder-text">
+                    Please use search by entering city name or click on the button
+                    "Current lacation" to see wheather.
+                </p>
             </div>
         </div>
         <div class="separator"></div>
-        <ul class="forecast">
-            <li>
-                <div>
-                    Monday
-                </div>
-                19°C ☀️
-            </li>
-            <li>
-                <div>
-                    Thuesday
-                </div>
-                17°C 🌦
-            </li>
-            <li>
-                <div>
-                    Wednesday
-                </div>
-                22°C ⛅
-            </li>
-            <li>
-                <div>
-                    Thursday
-                </div>
-                24°C 🌞
-            </li>
-            <li>
-                <div>
-                    Friday
-                </div>
-                22°C ⛅
-            </li>
-        </ul>
+        <div class="weather-forecast">
+            <div class="row" id="forecast"></div>
+        </div>
     </div>
     <div class="github-link">
         <a href="https://github.com/Skorohod91/WeatherApp" target="_blank">
